# ward

./: .env.example  .gitignore  ARCHITECTURE.md  BOUNTIES.md  BOUNTY-AUDIT.md  CUTS.md  DEMO-EVIDENCE.md  DEMO.md  DEPLOY.md  DESIGN.md  ETHGLOBAL-SUBMISSION.md  INTEGRATION.md  INTERFACES.md  PITCHES.md  PROJECT.md  README.md  STATUS.md  SUBMISSION.md  VIDEO-SCRIPT.md
agent/: .env.example  README.md  pyproject.toml  requirements.txt  verify_dry_run.py
agent/ward_agent/: __init__.py  chain.py  config.py  diagnosis.py  events.py  fake_sim.py  jobs.py  main.py  server.py  sim_client.py  triage.py
contracts/: .gitignore  README.md  export-abis.sh  foundry.toml
contracts/deployments/: 31337.json
contracts/script/: Deploy.s.sol  Seed.s.sol
contracts/src/: AuthorizedReporterVerifier.sol  JobEscrow.sol  MockUSDC.sol  WardEscrow.sol  WardReputationHook.sol  WorkerRegistry.sol
contracts/test/: AuthorizedReporterVerifier.t.sol  Reentrancy.t.sol  WardEscrow.t.sol  WardLifecycle.t.sol  WorkerRegistry.t.sol
cre/: .env.example  .gitignore  README.md  build-output.txt  foundry.toml  project.yaml  sim-output-live.txt  sim-output.txt
cre/contracts/: WardCreConsumer.sol
db/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
deployments/: 31337.json  5042002.json
docs/: AGENT-PLAYBOOK.md  BACKEND-SETUP.md  DEPLOY.md  DESIGN.md  INTERFACES.md  SPIKES.md  TODO.md
scripts/: brach-live.sh  dev-stack.sh
sim/: Dockerfile  README.md  main.py  pyproject.toml  railway.json
web/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+97 files in other folders)
