[project]
name = "ward-agent"
version = "0.1.0"
description = "WARD autonomous property-operations agent runtime (the brain)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "web3>=7.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
]

[project.scripts]
ward-agent = "ward_agent.main:main"
ward-server = "ward_agent.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ward_agent"]
